[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Phone.gd" type="Script" id=1]
[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=2]
[ext_resource path="res://ui/CharacterCards/DisplayCharacterPhone.gd" type="Script" id=3]
[ext_resource path="res://assets/office/big_phone.png" type="Texture" id=4]
[ext_resource path="res://assets/office/characterCard.png" type="Texture" id=5]
[ext_resource path="res://assets/office/Jermaine.png" type="Texture" id=6]

[node name="Phone" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="phone_background" type="ColorRect" parent="."]
margin_right = 1450.0
margin_bottom = 850.0
color = Color( 1, 1, 1, 0.588235 )

[node name="quit_phone" type="Button" parent="."]
margin_left = 1379.0
margin_top = 16.0
margin_right = 1431.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1.005 )
icon = ExtResource( 2 )
icon_align = 1

[node name="phone" type="TextureRect" parent="."]
margin_left = 292.0
margin_top = 47.0
margin_right = 945.0
margin_bottom = 844.0
rect_scale = Vector2( 1.25, 1 )
texture = ExtResource( 4 )

[node name="phone_info" type="TextureButton" parent="."]
visible = false
margin_left = 493.0
margin_top = 163.0
margin_right = 851.0
margin_bottom = 605.0
rect_scale = Vector2( 1.25, 1.1 )
texture_normal = ExtResource( 5 )

[node name="photo" type="TextureRect" parent="phone_info"]
visible = false
margin_left = 135.2
margin_top = 37.2727
margin_right = 217.2
margin_bottom = 127.273
rect_scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 6 )

[node name="name" type="Label" parent="phone_info"]
margin_left = 52.0
margin_top = 169.0
margin_right = 310.0
margin_bottom = 183.0
text = "Jermaine"
align = 1

[node name="job" type="Label" parent="phone_info"]
margin_left = 69.0
margin_top = 197.0
margin_right = 296.0
margin_bottom = 214.0
text = "Deputy Mayor"
align = 1

[node name="jobdesc" type="RichTextLabel" parent="phone_info"]
margin_left = 32.0
margin_top = 247.0
margin_right = 342.0
margin_bottom = 323.0
text = "A deputy mayor assists the mayor in matters of running the city. He chairs council meetings, liaisons with the community, and acts on behalf of the mayor."

[node name="fee" type="RichTextLabel" parent="phone_info"]
margin_left = 34.0
margin_top = 348.0
margin_right = 338.0
margin_bottom = 395.0
text = "You can consult with Jermaine for free. He is here to help."

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 496.0
margin_top = 167.0
margin_right = 939.0
margin_bottom = 639.0

[node name="DisplayCharacterPhone" type="VBoxContainer" parent="ScrollContainer"]
script = ExtResource( 3 )

[connection signal="pressed" from="quit_phone" to="." method="_on_quit_phone_pressed"]
[connection signal="pressed" from="phone_info" to="." method="_on_phone_info_pressed"]
